<resources>
    <string name="app_name">QuizAppProject</string>
    <string name="ruth_b_ginsburg_quiz">Ruth B Ginsburg Quiz</string>
    <string name="q1">Q1. What roles did Ruth B Ginsburg play?</string>
    <string name="a_united_states_president">A United States president</string>
    <string name="a_justice_on_the_usa_supreme_court">A Justice on the USA Supreme Court</string>
    <string name="q2">Q2. What was the name of Ruth Ginsburg\'s husband?</string>
    <string name="martin_ginsburg">Martin Ginsburg</string>
    <string name="michael_ginsburg">Michael Ginsburg</string>
    <string name="larry_ginsburg">Larry Ginsburg</string>
    <string name="q3">Q3. Ruth B Ginsburg was a mother of two children.</string>
    <string name="q4">Q4. Which two law schools did Ruth B Ginsburg attend?</string>
    <string name="yale_law_school">Yale Law School</string>
    <string name="stanford_law_school">Stanford Law School</string>
    <string name="columbia_law_school">Columbia Law School</string>
    <string name="harvard_law_school">Harvard Law School</string>
    <string name="q5">Q5. In what year was Ruth B Ginsburg nominated for her most recent role?</string>
    <string name="q6">Q6. What is Ruth B Ginsburg\'s maiden name?</string>
    <string name="a_mayor">A mayor of a small town in New York</string>
    <string name="advocate">An advocate for women\'s rights</string>
    <string name="name">Name</string>
</resources>